Website Landing Page

--- a/src/content/pages/adiwiyata.mdx
+++ b/src/content/pages/adiwiyata.mdx
@@ -269,6 +269,40 @@ done
 
 ![image](/images/banner.png)
 
+<div class="card-container">
+  <div class="card">
+    <img src="/images/avatar.png" />
+    <h3>Yahya Zulfikri</h3>
+    <p>Full Stack Developer.</p>
+  </div>
+  <div class="card">
+    <img src="/images/avatar.png" />
+    <h3>Yahya Zulfikri</h3>
+    <p>Full Stack Developer.</p>
+  </div>
+  <div class="card">
+    <img src="/images/avatar.png" />
+    <h3>Yahya Zulfikri</h3>
+    <p>Full Stack Developer.</p>
+  </div>
+  <div class="card">
+    <img src="/images/avatar.png" />
+    <h3>Yahya Zulfikri</h3>
+    <p>Full Stack Developer.</p>
+  </div>
+  <div class="card">
+    <img src="/images/avatar.png" />
+    <h3>Yahya Zulfikri</h3>
+    <p>Full Stack Developer.</p>
+  </div>
+  <div class="card">
+    <img src="/images/avatar.png" />
+    <h3>Yahya Zulfikri</h3>
+    <p>Full Stack Developer.</p>
+  </div>
+</div>
+
+
 
 ### Contoh Youtube video
 
